# edge_genegan

./: .gitignore  README.md  SPEC.md  pyproject.toml
configs/: default.yaml  rollout.yaml  stage1.yaml  stage2.yaml
edge_genegan/: __init__.py
edge_genegan/cli/: export_samples.py  infer_rollout.py  train.py  validate.py
edge_genegan/data/: __init__.py  edge_cache_dataset.py  samplers.py  transforms.py  vimeo_dataset.py
edge_genegan/evaluators/: __init__.py  metrics.py  rollout_eval.py  visualizer.py
edge_genegan/losses/: __init__.py  adversarial.py  cycle.py  edge_adherence.py  perceptual.py  reconstruction.py
edge_genegan/models/: __init__.py  appearance_aggregator.py  blocks.py  discriminator.py  edge_decoder.py  edge_encoder.py  rgb_decoder.py  rgb_encoder.py  system.py
edge_genegan/preprocess/: __init__.py  build_splits.py  extract_edges.py
edge_genegan/trainers/: __init__.py  hooks.py  trainer.py
edge_genegan/utils/: __init__.py  ckpt.py  config.py  device.py  image_io.py  logging.py  seed.py
tests/: test_dataset.py  test_forward_smoke.py  test_model_shapes.py  test_train_step.py
